printf should return negative value on error

[BZ #11741]
Fixed bug where printf and family may return a spurious success when
printing padded formats.